--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "p5js-electron-canvas-saver-boilerplate",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "An Electron template to help save p5js canvas to image sequence and video files.",
   "main": "index.js",
   "scripts": {
+    "start": "electron .",
     "electron": "electron .",
     "dist": "build"
   },
   "author": "Dae In Chung",
   "license": "MIT",
   "dependencies": {
-    "electron-reload": "^1.5.0",
-    "ffmpeg-static": "^2.7.0",
+    "electron-reload": "^2.0.0-alpha.1",
+    "ffmpeg-static": "^4.4.1",
     "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
-    "electron": "^11.5.0",
-    "electron-builder": "^20.44.4"
+    "electron": "^17.0.0",
+    "electron-builder": "^22.14.13"
   }
 }
